5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4181/executions/1595_1446.log
== TEST (2019-04-01 22:39:54) 
-- CODE:
print(float(round(6.6, 3)))
-- OUTPUT:
6.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:40:05) 
-- CODE:
print(float(round(6.666, 3)))
-- OUTPUT:
6.666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:02:12) 
-- CODE:
var = float(input"quantos litros")
print(round(var/3, 37))
-- ERROR:
File "XXXX", line 1
    var = float(input"quantos litros")
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:02:19) 
-- CODE:
var = float(input"quantos litros")
print(round(var/3, 7))
-- ERROR:
File "XXXX", line 1
    var = float(input"quantos litros")
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:02:45) 
-- CODE:
var = float(input("quantos litros"))
print(round(var/3, 7))
-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:02:55) 
-- CODE:
var = float(input("quantos litros"))
print(round(var/3, 3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:03:09) 
-- CODE:
var = float(input("quantos litros"))
print(round(var/3, 3))
-- EXECUTION TIME:
0.205932
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
